--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinil.me</title>
-    <link rel="icon" type="image/x-icon" href="profile.jpeg">
+    <link rel="icon" type="image/x-icon" href="https://github.com/Dinil31/Dinil.me/blob/main/profile.jpeg?raw=true">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
             <div class="left-content">
                 <div class="profile">
                     <div class="image">
-                        <img src="C:\Users\User\Desktop\web\Digital cv\profile.jpeg" alt="">
+                        <img src="https://github.com/Dinil31/Dinil.me/blob/main/profile.jpeg?raw=true" alt="">
                     </div>
                     <h2 class="name">Dinil Randika Kalupahanana</h2>
                     <p class="career">Software Engineer</p>
