--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="image">
                         <img src="https://github.com/Dinil31/Dinil.me/blob/main/profile.jpeg?raw=true" alt="">
                     </div>
-                    <h2 class="name">Dinil Randika Kalupahanana</h2>
+                    <h2 class="name">Dinil Randika Kalupahana</h2>
                     <p class="career">Software Engineer</p>
                 </div>
                 <div class="contact-info">
